<resources>
    <string name="app_name">SampleSqliteTestwork</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_et_username">username</string>
    <string name="hint_et_password">password</string>
    <string name="label_btn_login">login</string>
    <string name="label_btn_register">register</string>
    <string name="label_no_account">Don\'t have an account ?</string>
    <string name="label_have_account">Already have an account</string>
    <string name="label_change_image">click on image to change profile</string>
    <string name="desc_photo">photo</string>
    <string name="hint_et_email">email</string>
    <string name="file_provider_authority" translatable="false">com.cheise_proj.samplesqlitetestwork.fileprovider</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_contact">Contacts</string>
    <string name="menu_profile">Profile</string>
    <string name="label_et_contact_tel">telephone</string>
    <string name="label_et_contact_name">contact name</string>
    <string name="label_btn_create_contact">create contact</string>
    <string name="action_logout">logout</string>
    <integer name="row_hr1">20</integer>
    <integer name="row_hr2">22</integer>
    <integer name="row_hr3">23</integer>

</resources>
