<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.profile.MainActivity">

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="@dimen/medium_set_margin_8dp"
        android:background="@drawable/profile"
        android:contentDescription="@string/desc_photo"
        android:scaleType="centerCrop" />


    <TextView
        android:id="@+id/tv_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_set_margin_8dp"
        android:padding="@dimen/large_set_margin_16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="user identifier" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_set_margin_8dp"
        android:padding="@dimen/large_set_margin_16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="@string/hint_et_username" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_set_margin_8dp"
        android:padding="@dimen/large_set_margin_16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="@string/hint_et_email" />

</LinearLayout>